--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,10 +1,8 @@
-form{
+#form{
     display: flex;
-    position:relative;
     background-color: white;
     justify-content: center;
     align-items: center;
-
 }
 
 .habilidades{
