--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,12 +1,29 @@
 #form{
     display: flex;
-    background-color: white;
     justify-content: center;
     align-items: center;
+    margin-top: 6%;
+    
+}
+
+#container{
+    box-sizing: border-box;
+    background-color: white;
+    padding: 30px 80px 40px;
+    text-align: justify;
+}
+
+h2{
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+input{ 
+    margin-top: 8px;
 }
 
 .habilidades{
-   
+    
 }
 
 .idiomas{}
