--- a/css/formulario.css
+++ b/css/formulario.css
@@ -11,6 +11,7 @@
     background-color: white;
     padding: 30px 80px 40px;
     text-align: justify;
+    border-radius: 10px;
 }
 
 h2{
@@ -22,10 +23,12 @@ input{
     margin-top: 8px;
 }
 
-.habilidades{
-    
+#botao-enviar{
+    margin-left: 200px;
+    margin-top: 20px;
+    padding: 5px;
 }
 
-.idiomas{}
-
-.qualidades{}
+.complemento{
+    text-align: top;
+}
