--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -1,12 +1,28 @@
 #curriculo{
     background-color: white;
+    width: 80%;
+    margin: auto;
 }
 
-.quadrado-dados{
-    transform: rotate(270deg);
+main{
+    margin-left: 150px;
+    padding-top: 20px;
+}
+
+aside{
+    margin-left: 300px;
+    background-color: aqua;
+}
+
+h2{
+    padding-top: 20px;
+}
+
+#container{
+    width: 30%;
     text-align: center;
-    position: absolute;
-    margin-top: 10%;
+    box-sizing: border-box;
+    margin-top: 40px;
 }
 
 .quadrado-texto{
