--- a/css/curriculo.css
+++ b/css/curriculo.css
@@ -30,7 +30,6 @@ h2{
 
 #fundo-foto{
     background-color: #3A454B;
-    padding-block: 200px;
     width: 100%;
 }
 
@@ -64,5 +63,12 @@ h2{
 
 .dados-inseridos{
     margin-top: 20%;
+}
+
+img{
+    width: 300px;
+    height: 300px;
+    margin: 10% 0;
+    margin-right: 22%;
 }
 
