--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,22 +1,17 @@
-#form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 6%;
-    
-}
-
-#container{
-    box-sizing: border-box;
+form{
     background-color: white;
-    padding: 30px 80px 40px;
-    text-align: justify;
     border-radius: 10px;
+    margin: 5% auto;
+    width: 60%;
 }
 
 h2{
     text-align: center;
-    padding-bottom: 10px;
+    padding: 3% 0;
+}
+
+h3{
+    text-align: center;
 }
 
 input{ 
@@ -24,11 +19,77 @@ input{
 }
 
 #botao-enviar{
-    margin-left: 200px;
-    margin-top: 20px;
-    padding: 5px;
+    margin-left: 45%;
+    margin-bottom: 4%;
+    padding: 12px;
+    background-color: green;
+    border-radius: 10px;
+    border: none;
+    color: white;
 }
 
-.complemento{
-    text-align: top;
+.label-form{
+    line-height: 45px;
+    padding-left: 10%;
 }
+
+.label-skills{
+    line-height: 22px;
+    padding-left: 50%;
+}
+
+.input-form{
+    margin-bottom: 18px;
+}
+
+.slider {
+    margin-top: 5px;
+    background-color: lightgray;
+}
+
+.col-4{
+    background-color: lightgray;
+    margin-bottom: 5%;
+    padding-bottom: 2%;
+}
+
+input[type=range] {
+    -webkit-appearance: none;
+    width: 70%;
+}
+
+input[type=range]:focus {
+outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+width: 100%;
+height: 10px;
+cursor: pointer;
+animate: 0.2s;
+box-shadow: 1px 1px 1px #000000;
+background: #3A454B;
+border-radius: 5px;
+border: 1px solid #000000;
+}
+
+input[type=range]::-webkit-slider-thumb {
+box-shadow: 1px 1px 1px #000000;
+border: 1px solid #000000;
+height: 15px;
+width: 15px;
+border-radius: 15px;
+background: #FFFFFF;
+cursor: pointer;
+-webkit-appearance: none;
+margin-top: -4px;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+background: #C5203C;
+}
+
+  
+
+
+
